<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent">

<androidx.cardview.widget.CardView
    android:id="@+id/card_two_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<ListView
    android:id="@+id/item_listView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/btn_pie"
    android:layout_margin="10dp"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"/>

<androidx.appcompat.widget.AppCompatButton
    android:id="@+id/btn_pie"
    android:layout_width="50dp"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:background="@drawable/todo_circle"
    android:padding="6dp"
    android:text="@string/zero"
    android:textColor="#fff"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/text_one"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:padding="6dp"
    android:text="@string/uncompleted"
    app:layout_constraintEnd_toStartOf="@+id/btn_one_pie"
    app:layout_constraintStart_toEndOf="@+id/btn_pie"
    app:layout_constraintTop_toTopOf="parent" />

<androidx.appcompat.widget.AppCompatButton
    android:id="@+id/btn_one_pie"
    android:layout_width="50dp"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:background="@drawable/todo_circle"
    android:padding="6dp"
    android:text="@string/zero"
    android:textColor="#fff"
    app:layout_constraintEnd_toStartOf="@+id/text_two"
    app:layout_constraintStart_toEndOf="@+id/text_one"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/text_two"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:padding="6dp"
    android:text="@string/completed"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/btn_one_pie"
    app:layout_constraintTop_toTopOf="parent" />



<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/btn_plus"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:contentDescription="@string/plus"
    android:src="@drawable/ic_plus"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>