<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:background="#DFEAEC"
android:layout_height="match_parent">

<TextView
    android:id="@+id/msg"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:text="@string/priority"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />


<EditText
    android:id="@+id/task_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:inputType="text"
    android:padding="10dp"
    android:text="@string/task_name"
    app:layout_constraintEnd_toStartOf="@+id/mic"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/msg" />

<Spinner
    android:id="@+id/spinner"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:spinnerMode="dropdown"
    app:layout_constraintStart_toEndOf="@+id/msg"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<ImageView
    android:id="@+id/mic"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:padding="10dp"
    android:src="@drawable/ic_mic"
    app:tint="@color/mic_disabled_color"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/spinner"/>

<EditText
    android:id="@+id/task_desc"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:inputType="text"
    android:padding="10dp"
    android:text="@string/task_desc"
    app:layout_constraintEnd_toStartOf="@+id/mic_one"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/task_name" />

<ImageView
    android:id="@+id/mic_one"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:padding="10dp"
    android:src="@drawable/ic_mic"
    app:tint="@color/mic_disabled_color"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/mic"/>

<!--
<ImageView
    android:id="@+id/check"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:layout_margin="12dp"
    android:src="@drawable/ic_check_box"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/task_desc"/>
-->

<CheckBox
    android:id="@+id/repeat"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="18dp"
    android:padding="18dp"
    android:text="@string/repeat"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/task_desc" />

<ImageView
    android:id="@+id/cal"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:padding="12dp"
    android:src="@drawable/ic_calendar"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/repeat" />

<TextView
    android:id="@+id/start"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:padding="12dp"
    android:text="@string/date_start"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/cal"
    app:layout_constraintTop_toBottomOf="@id/repeat" />

<ImageView
    android:id="@+id/close_one"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:src="@drawable/ic_close"
    app:layout_constraintBottom_toTopOf="@+id/closing"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/start"
    app:layout_constraintStart_toStartOf="@id/mic"
    app:layout_constraintTop_toBottomOf="@id/repeat" />


<ImageView
    android:id="@+id/cal_one"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:padding="12dp"
    android:src="@drawable/ic_calendar"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/cal" />

<TextView
    android:id="@+id/finish"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:padding="12dp"
    android:text="@string/date_finish"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/cal_one"
    app:layout_constraintTop_toBottomOf="@id/start" />

<ImageView
    android:id="@+id/closing"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:padding="12dp"
    android:src="@drawable/ic_close"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/finish"
    app:layout_constraintStart_toStartOf="@id/mic"
    app:layout_constraintTop_toBottomOf="@id/close_one" />

</androidx.constraintlayout.widget.ConstraintLayout>