<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView

        android:id="@+id/tasks_for_today"
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:padding="12dp"
        android:src="@drawable/ic_tasks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/tasks"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toStartOf="@+id/btn"
        app:layout_constraintStart_toEndOf="@+id/tasks_for_today"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="6dp"
        android:background="@drawable/todo_circle"
        android:padding="6dp"
        android:textColor="#fff"
        android:text="@string/zero"
        app:layout_constraintBottom_toTopOf="@id/btn_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:contentDescription="@string/app_name"
        android:id="@+id/view_stub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:padding="12dp"
        android:src="@drawable/ic_calendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tasks_for_today" />

    <TextView
        android:id="@+id/calendar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/calendar"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_one"
        app:layout_constraintStart_toStartOf="@+id/task"
        app:layout_constraintTop_toBottomOf="@+id/task" />

    <Button
        android:id="@+id/btn_one"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="6dp"
        android:background="@drawable/todo_circle"
        android:padding="6dp"
        android:text="@string/zero"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@id/btn_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn" />


    <ImageView
        android:id="@+id/view_one"
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:padding="12dp"
        android:src="@drawable/ic_recurring_tasks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_stub" />

    <TextView
        android:id="@+id/rec_tasks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/recurring_tasks"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="@+id/task"
        app:layout_constraintTop_toBottomOf="@+id/calendar"
        app:layout_constraintEnd_toStartOf="@id/btn_two"/>

    <Button
        android:id="@+id/btn_two"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="6dp"
        android:background="@drawable/todo_circle"
        android:padding="6dp"
        android:text="@string/zero"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@id/btn_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_one" />


    <ImageView
        android:id="@+id/view_two"
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:padding="12dp"
        android:src="@drawable/ic_goal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_one" />

    <TextView
        android:id="@+id/goals"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/my_goals"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="@+id/task"
        app:layout_constraintEnd_toStartOf="@id/btn_three"
        app:layout_constraintTop_toBottomOf="@+id/rec_tasks" />


    <Button
        android:id="@+id/btn_three"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="6dp"
        android:background="@drawable/todo_circle"
        android:padding="6dp"
        android:text="@string/zero"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_two" />
</androidx.constraintlayout.widget.ConstraintLayout>