<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_one_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/rec_but"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/circle_forweekdays"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/percent"
                android:textColor="#fff"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/my_goals"
                app:layout_constraintBottom_toTopOf="@+id/report"
                app:layout_constraintStart_toEndOf="@+id/rec_but"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/material_motion_easing_standard"
                android:src="@drawable/ic_completed_task"
                app:layout_constraintStart_toEndOf="@+id/rec_but"
                app:layout_constraintTop_toBottomOf="@+id/date" />

            <TextView
                android:id="@+id/zero_ofZero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/number"
                app:layout_constraintEnd_toStartOf="@+id/cal"
                app:layout_constraintStart_toEndOf="@+id/report"
                app:layout_constraintTop_toBottomOf="@+id/date" />

            <ImageView
                android:id="@+id/cal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/material_motion_easing_standard"
                android:src="@drawable/ic_goal"
                app:layout_constraintStart_toEndOf="@+id/zero_ofZero"
                app:layout_constraintTop_toBottomOf="@+id/date" />

            <TextView
                android:id="@+id/zero_one_ofZero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/number"
                app:layout_constraintStart_toEndOf="@+id/cal"
                app:layout_constraintTop_toBottomOf="@+id/date" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
    <include
        android:id="@+id/tasksfortodaytwo"
        layout="@layout/tasksfortodaytwo"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_one_view" />



</androidx.constraintlayout.widget.ConstraintLayout>