<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:viewBindingIgnore="false"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/Monday"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/September_first"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/per"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/percent"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="italic" />

    </LinearLayout>

    <!--<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/week_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/Tuesday"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/date_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/September_second"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/per_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/percent"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/week_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/Wednesday"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/date_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/September_third"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/per_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/percent"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/week_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/Thursday"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/date_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/September_fourth"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/per_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/percent"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/week_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/Friday"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/date_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/September_fifth"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/per_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/percent"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/week_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/Saturday"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/date_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/September_six"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/per_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/percent"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="italic" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/week_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/Sunday"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/date_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/September_seven"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/per_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/percent"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="italic" />

    </LinearLayout>
-->

</androidx.appcompat.widget.LinearLayoutCompat>
